# money

./: Cargo.toml  Dockerfile
crates/db/: Cargo.toml
crates/db/src/: lib.rs  model.rs
crates/driver/: Cargo.toml
crates/driver/src/: main.rs
crates/kraken-api/: Cargo.toml
crates/kraken-api/src/: lib.rs
migrations/: 20250506180322_create-trades.sql
