[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
futures-util = "0.3.31"
pretty_env_logger = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = "0.8.5"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
kraken-api.workspace = true